--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -281,12 +281,12 @@ resources:
             
             mkdir -p /root/cassandra-data
             mkdir -p /root/cassandra-config
-            wget https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
-            sed -i 's/master_ip/$ip1/g' cassandra.yaml
-            sed -i 's/node_ip/$ip1/g' cassandra.yaml
+            wget https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml -O /root/cassandra-config/cassandra.yaml
+            sed -i 's/master_ip/$ip1/g' /root/cassandra-config/cassandra.yaml
+            sed -i 's/node_ip/$ip1/g' /root/cassandra-config/cassandra.yaml
             
             # docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e JVM_EXTRA_OPTS=-Dcassandra.config=cassandra.yaml  -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config:/etc/cassandra" -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -p 7000:7000 cassandra
             export http_proxy=http://$proxy_host:$proxy_port
             export https_proxy=http://$proxy_host:$proxy_port
 
@@ -391,12 +391,12 @@ resources:
             
             mkdir -p /root/cassandra-data
             mkdir -p /root/cassandra-config
-            wget https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
-            sed -i 's/master_ip/$ip1/g' cassandra.yaml
-            sed -i 's/node_ip/$ip2/g' cassandra.yaml
+            wget https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml -O /root/cassandra-config/cassandra.yaml
+            sed -i 's/master_ip/$ip1/g' /root/cassandra-config/cassandra.yaml
+            sed -i 's/node_ip/$ip2/g' /root/cassandra-config/cassandra.yaml
             
             # docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e JVM_EXTRA_OPTS=-Dcassandra.config=cassandra.yaml  -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config:/etc/cassandra" -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -p 7000:7000 cassandra
             
             # Installing Telegraf agent
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
@@ -501,12 +501,12 @@ resources:
             
             mkdir -p /root/cassandra-data
             mkdir -p /root/cassandra-config
-            wget https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
-            sed -i 's/master_ip/$ip1/g' cassandra.yaml
-            sed -i 's/node_ip/$ip3/g' cassandra.yaml
+            wget https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml -O /root/cassandra-config/cassandra.yaml
+            sed -i 's/master_ip/$ip1/g' /root/cassandra-config/cassandra.yaml
+            sed -i 's/node_ip/$ip3/g' /root/cassandra-config/cassandra.yaml
             
             # docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e JVM_EXTRA_OPTS=-Dcassandra.config=cassandra.yaml  -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config:/etc/cassandra" -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -p 7000:7000 cassandra
             
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
             dpkg -i telegraf_1.10.3-1_amd64.deb
