--- a/cassandra_cinder_volume_type.yaml
+++ b/cassandra_cinder_volume_type.yaml
@@ -537,9 +537,9 @@ resources:
             echo "sleeping now for 120"
             sleep 120
             echo "Now will reset password"
-            docker exec -i cassandra3 sh -c "cqlsh -u cassandra -p cassandra --execute ALTER USER cassandra WITH PASSWORD $db_pass;"
+            docker exec -i cassandra3 bash -c "cqlsh -u cassandra -p cassandra --execute ALTER USER cassandra WITH PASSWORD $db_pass;"
             echo "Password reset done, now i will create sb"
-            docker exec -i cassandra3 sh -c "cqlsh -u cassandra -p $db_pass --execute CREATE KEYSPACE $db WITH replication = {'class':'SimpleStrategy', 'replication_factor' : 3};"
+            docker exec -i cassandra3 bash -c "cqlsh -u cassandra -p $db_pass --execute CREATE KEYSPACE $db WITH replication = {'class':'SimpleStrategy', 'replication_factor' : 3};"
             echo "DB creation done."
 
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
