--- a/cassandra_cinder_volume_type.yaml
+++ b/cassandra_cinder_volume_type.yaml
@@ -536,8 +536,8 @@ resources:
             
             echo "sleeping now for 120"
             sleep 120
-            docker exec -i cassandra3 cqlsh -u cassandra -p 'cassandra' --execute "ALTER USER cassandra WITH PASSWORD '$db_pass'";
-            docker exec -i cassandra3 cqlsh -u cassandra -p '$db_pass'  --execute "CREATE KEYSPACE '$db' WITH replication = {'class':'SimpleStrategy', 'replication_factor' : 3}";
+            docker exec -i cassandra3 cqlsh localhost 9042 -u cassandra -p 'cassandra' --execute "ALTER USER cassandra WITH PASSWORD '$db_pass'";
+            docker exec -i cassandra3 cqlsh localhost 9042 -u cassandra -p '$db_pass'  --execute "CREATE KEYSPACE '$db' WITH replication = {'class':'SimpleStrategy', 'replication_factor' : 3}";
             echo "DB creation done."
 
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
