--- a/cassandra_cinder_volume_type.yaml
+++ b/cassandra_cinder_volume_type.yaml
@@ -534,14 +534,14 @@ resources:
             # docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e JVM_EXTRA_OPTS=-Dcassandra.config=cassandra.yaml  -p 7000:7000 cassandra
             docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -e "CASSANDRA_BROADCAST_ADDRESS=$ip3" -e "CASSANDRA_SEEDS=$ip1" -p 7000:7000 cassandra
             
-            cat <<EOF >>init.cql
+            cat <<EOF >>/root/cassandra-data/init.cql
             ALTER USER cassandra WITH PASSWORD $db_pass';
             CREATE KEYSPACE $db WITH replication = {class:SimpleStrategy, replication_factor : 3}';
             EOF
             
             echo "sleeping now for 120"
             sleep 60
-            docker exec -i cassandra3 cqlsh -u cassandra -p cassandra -f init.cql
+            docker exec -i cassandra3 cqlsh -u cassandra -p cassandra -f /root/cassandra-data/init.cql
             #docker exec -i cassandra3 bash -c "cqlsh localhost 9042 -u cassandra -p cassandra --execute 'ALTER USER cassandra WITH PASSWORD $db_pass';"
             #docker exec -i cassandra3 bash -c "cqlsh localhost 9042 -u cassandra -p $db_pass  --execute 'CREATE KEYSPACE $db WITH replication = {class:SimpleStrategy, replication_factor : 3}';"
             echo "DB creation done."
