--- a/mongo_with_volume_type.yaml
+++ b/mongo_with_volume_type.yaml
@@ -2,6 +2,9 @@ heat_template_version: 2017-02-24
 description: >
   This template deploys MongoDB replica set on Ubuntu for JAWS
 parameters:
+  sync:
+    type: boolean
+    default: False
   image:
     type: string
     default: Ubuntu1604
