using new sec name

--- a/none.yaml
+++ b/none.yaml
@@ -75,8 +75,8 @@ parameters:
 
   security_group_id:
     type: string
-    description: alarmsfeature_sg from QA-test hardcoded
-    default: 6bad5b8a-5b2e-48f7-8483-8a02a3c4383f
+    description: sitk-demo-kap_sg from QA-test hardcoded
+    default: sitk-demo-kap_sg
     
 #   environment:
 #     type: string
@@ -130,7 +130,8 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      security_groups: [ get_param: security_group_id ]
+      security_groups:
+        - { get_param: security_group_id }
       # security_groups:
       #   - { get_resource: security_group }
 
