--- a/none.yaml
+++ b/none.yaml
@@ -130,9 +130,9 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      security_groups:
-        - { get_param: security_group_id }
-          condition: defaultsg
+      security_groups: { get_param: security_group_id }
+        condition: defaultsg
+      
       # security_groups:
       #   - { get_resource: security_group }
 
