--- a/none.yaml
+++ b/none.yaml
@@ -5,7 +5,7 @@ parameters:
 
   sg_type:
     type: string
-    default: defaultsg 
+    default: custom 
 
   key:
     type: string
@@ -98,31 +98,32 @@ resources:
   #     name: { get_param: security_group_id }
     # condition: custom
 
-  # security_group:
-  #   type: OS::Neutron::SecurityGroup
-  #   properties:
-  #     name: { get_param: securityGroup }
-  #     rules: [
-  #            {"direction": ingress,
-  #             "remote_ip_prefix": 0.0.0.0/0,
-  #             "port_range_min": 22,
-  #             "port_range_max": 22,
-  #             "ethertype": IPv4,
-  #             "protocol": tcp},
-  #             {"direction": ingress,
-  #             "remote_ip_prefix": 0.0.0.0/0,
-  #             "port_range_min": 80,
-  #             "port_range_max": 80,
-  #             "ethertype": IPv4,
-  #             "protocol": tcp},
-  #             {"direction": ingress,
-  #             "remote_ip_prefix": 0.0.0.0/0,
-  #             "port_range_min": 443,
-  #             "port_range_max": 443,
-  #             "ethertype": IPv4,
-  #             "protocol": tcp}
+  security_group:
+    type: OS::Neutron::SecurityGroup
+    properties:
+      name: { get_param: securityGroup }
+      condition: defaultsg
+      rules: [
+             {"direction": ingress,
+              "remote_ip_prefix": 0.0.0.0/0,
+              "port_range_min": 22,
+              "port_range_max": 22,
+              "ethertype": IPv4,
+              "protocol": tcp},
+              {"direction": ingress,
+              "remote_ip_prefix": 0.0.0.0/0,
+              "port_range_min": 80,
+              "port_range_max": 80,
+              "ethertype": IPv4,
+              "protocol": tcp},
+              {"direction": ingress,
+              "remote_ip_prefix": 0.0.0.0/0,
+              "port_range_min": 443,
+              "port_range_max": 443,
+              "ethertype": IPv4,
+              "protocol": tcp}
 
-  #           ]
+            ]
 
   server_port:
     type: OS::Neutron::Port
@@ -130,8 +131,7 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      security_groups: { get_param: security_group_id }
-        condition: custom
+      security_groups: { if: ["custom", get_param: security_group_id, get_resource: security_group ] }
       
       # security_groups:
       #   - { get_resource: security_group }
