--- a/none.yaml
+++ b/none.yaml
@@ -131,7 +131,7 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      security_groups: { if: ["custom", {get_param: security_group_id}, {get_resource: security_group} ] }
+      security_groups: - { if: ["custom", {get_param: security_group_id}, {get_resource: security_group} ] }
       
       # security_groups:
       #   - { get_resource: security_group }
