changing condition to defaultsg uncommenting custom

--- a/none.yaml
+++ b/none.yaml
@@ -132,18 +132,18 @@ resources:
     condition: defaultsg     
     
 
-  # server_port:
-  #   type: OS::Neutron::Port
-  #   properties:
-  #     network_id: { get_param: internalNet }
-  #     fixed_ips:
-  #       - subnet_id: { get_param: internalSubnet  }
-  #     # security_groups: 
-  #     #   - { if: ["custom", {get_param: security_group_id}, {get_resource: security_group} ] }
+  server_port:
+    type: OS::Neutron::Port
+    properties:
+      network_id: { get_param: internalNet }
+      fixed_ips:
+        - subnet_id: { get_param: internalSubnet  }
+      # security_groups: 
+      #   - { if: ["custom", {get_param: security_group_id}, {get_resource: security_group} ] }
       
-  #     security_groups:
-  #       - { get_param: security_group_id }
-  #   condition: custom
+      security_groups:
+        - { get_param: security_group_id }
+    condition: custom
 
 
   server:
