back to if condition

--- a/none.yaml
+++ b/none.yaml
@@ -5,7 +5,7 @@ parameters:
 
   sg_type:
     type: string
-    default: defaultsg 
+    default: custom 
 
   key:
     type: string
@@ -121,15 +121,15 @@ resources:
             ]
     condition: defaultsg
 
-  server_port:
-    type: OS::Neutron::Port
-    properties:
-      network_id: { get_param: internalNet }
-      fixed_ips:
-        - subnet_id: { get_param: internalSubnet  }
-      security_groups:
-        - { get_resource: security_group }
-    condition: defaultsg     
+  # server_port:
+  #   type: OS::Neutron::Port
+  #   properties:
+  #     network_id: { get_param: internalNet }
+  #     fixed_ips:
+  #       - subnet_id: { get_param: internalSubnet  }
+  #     security_groups:
+  #       - { get_resource: security_group }
+  #   condition: defaultsg     
     
 
   server_port:
@@ -138,12 +138,12 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      # security_groups: 
-      #   - { if: ["custom", {get_param: security_group_id}, {get_resource: security_group} ] }
+      security_groups: 
+        - { if: ["custom", { get_param: security_group_id }, { get_resource: security_group } ] }
       
-      security_groups:
-        - { get_param: security_group_id }
-    condition: custom
+    #   security_groups:
+    #     - { get_param: security_group_id }
+    # condition: custom
 
 
   server:
