--- a/none.yaml
+++ b/none.yaml
@@ -73,11 +73,6 @@ parameters:
     type: boolean
     default: false
 
-  security_group_id:
-    type: string
-    description: sitk-demo-kap_sg from QA-test hardcoded
-    default: sitk-demo-kap_sg
-    
 #   environment:
 #     type: string
 #     default: development  
@@ -85,14 +80,9 @@ parameters:
 conditions:
   custom: {equals: [{get_param: sg_type}, "custom"]}
   defaultsg: {equals: [{get_param: sg_type}, "defaultsg"]}
+  
 
 resources:
-  # security_groups: [security-name.alarmsfeature_sg]
-  # security_group:
-  #   type: OS::Neutron::SecurityGroup
-  #   properties:
-  #     name: { get_param: security_group_id }
-    # condition: custom
 
   security_group:
     type: OS::Neutron::SecurityGroup
@@ -119,17 +109,7 @@ resources:
               "protocol": tcp}
 
             ]
-    condition: defaultsg
-
-  # server_port:
-  #   type: OS::Neutron::Port
-  #   properties:
-  #     network_id: { get_param: internalNet }
-  #     fixed_ips:
-  #       - subnet_id: { get_param: internalSubnet  }
-  #     security_groups:
-  #       - { get_resource: security_group }
-  #   condition: defaultsg     
+    condition: defaultsg    
     
 
   server_port:
@@ -139,11 +119,8 @@ resources:
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
       security_groups: 
-        - { if: ["custom", { get_param: security_group_id }, { get_resource: security_group } ] }
+        - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
       
-    #   security_groups:
-    #     - { get_param: security_group_id }
-    # condition: custom
 
 
   server:
