--- a/none.yaml
+++ b/none.yaml
@@ -5,7 +5,7 @@ parameters:
 
   sg_type:
     type: string
-    default: defaultsg 
+    default: default
 
   key:
     type: string
@@ -79,8 +79,8 @@ parameters:
 
 conditions:
   custom: {equals: [{get_param: sg_type}, "custom"]}
-  defaultsg: {equals: [{get_param: sg_type}, "defaultsg"]}
-  
+  default: {equals: [{get_param: sg_type}, "default"]}
+
 
 resources:
 
@@ -109,7 +109,7 @@ resources:
               "protocol": tcp}
 
             ]
-    condition: defaultsg    
+    condition: default   
     
 
   server_port:
