--- a/cassandrav2.yaml
+++ b/cassandrav2.yaml
@@ -568,6 +568,9 @@ outputs:
   db_engine: 
     description: Database engine name
     value: Cassandra
+  db_engine_version: 
+    description: Database Version
+    value: Cassandra v3.11.4
   keypair: 
     description: Keypair to connect to Database instances
     value: { get_param: key }
@@ -602,7 +605,7 @@ outputs:
     description: Cassandra cluster connection url
     value:
       str_replace:
-        template: cassandra://root:$pass@$host1:7000,$host2:7000,$host3:7000
+        template: cassandra://cassandra:$pass@$host1:7000,$host2:7000,$host3:7000
         params:
           $pass: { get_param: db_pass }
           $host1: { get_attr: [cassandra1_floatingip, floating_ip_address] }
