--- a/mean.yaml
+++ b/mean.yaml
@@ -3,6 +3,10 @@ description: >
   creating nodejs , angular and mongodb stack
 
 parameters:
+  sg_type:
+    type: string
+    default: default
+
   key:
     type: string
     description: >
@@ -65,7 +69,9 @@ parameters:
     type: boolean
     default: false
 
-
+conditions:
+  custom: {equals: [{get_param: sg_type}, "custom"]}
+  default: {equals: [{get_param: sg_type}, "default"]}
 
 
 
@@ -107,6 +113,7 @@ resources:
               "protocol": tcp}
 
             ]
+    condition: default
 
   server_port:
     type: OS::Neutron::Port
@@ -115,7 +122,7 @@ resources:
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
       security_groups:
-        - { get_resource: security_group }
+        - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
 
   server:
