--- a/nginx.yaml
+++ b/nginx.yaml
@@ -3,6 +3,10 @@ description: >
   creating nodejs stack
 
 parameters:
+  sg_type:
+    type: string
+    default: default
+    
   key:
     type: string
     description: >
@@ -65,9 +69,9 @@ parameters:
     type: boolean
     default: false
 
-
-
-
+conditions:
+  custom: {equals: [{get_param: sg_type}, "custom"]}
+  default: {equals: [{get_param: sg_type}, "default"]}
 
 
 resources:
@@ -95,6 +99,7 @@ resources:
               "ethertype": IPv4,
               "protocol": tcp}
             ]
+    condition: default
 
   server_port:
     type: OS::Neutron::Port
@@ -103,7 +108,7 @@ resources:
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
       security_groups:
-        - { get_resource: security_group }
+        - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
 
   server:
